--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="img/pokedex.png">
 </head>
 
 <body>
     <main>
-        <div class="container-fluid">
-            <nav id="navbar" class="navbar navbar-expand-lg  bg-body-tertiary">
+        <div>
+            <nav id="navbar">
                 <ul id="navcats">
-                    <li class="nav-item"><a class="nav-link active" href="#">Pokedex</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Pokedex</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Pokedex</a></li>
+                    <li><a href="#">Pokedex</a></li>
+                    <li><a href="#">Imágenes</a></li>
+                    <li><a href="#">Detalles</a></li>
                 </ul>
             </nav>
         </div>
-        <section>
+        <section id="busquedapm">
             <div>
                 <label for="">Pokemon: <input type="text" name="pokemon" placeholder="Nombre o numero del dex"></label>
                 <input type="button" name="buscar" id="buscar" value="Buscar">
