--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
         <div>
             <nav id="navbar">
                 <ul id="navcats">
-                    <li><a href="#">Pokedex</a></li>
-                    <li><a href="#">Imágenes</a></li>
+                    <li><a href="#pokedex">Pokedex</a></li>
                     <li><a href="#">Detalles</a></li>
+                    <li><a href="#">Creditos</a></li>
                 </ul>
             </nav>
         </div>
-        <section id="busquedapm">
-            <div>
-                <label for="">Pokemon: <input type="text" name="pokemon" placeholder="Nombre o numero del dex"></label>
-                <input type="button" name="buscar" id="buscar" value="Buscar">
-                <input type="button" name="random" value="Rng">
-                <input type="button" name="pkm-siguiente" class="btn btn-primary" value="Pokemon siguiente">
-                <input type="button" name="pkm-anterior" class="btn btn-primary" value="Pokemon anterior">
-                <input type="button" name="imagen" class="btn btn-primary" value="Rotar">
-                <input type="button" name="imagen" class="btn btn-primary" value="Rotar">
+        <section>
+            <div id="busquedapm">
+                <label for="">Pokemon: <input type="text" name="pokemon" placeholder="Nombre o numero"></label>
+                <input type="button" name="buscar" class="btn btn-warning" id="buscar" value="Buscar">
+                <input type="button" name="random" class="btn btn-secondary" value="Pokemon Random">
+                <input type="button" name="pkm-siguiente" class="btn btn-success" value="Pokemon siguiente">
+                <input type="button" name="pkm-anterior" class="btn btn-danger" value="Pokemon anterior">
+                <input type="button" name="imagen" class="btn btn-dark" value="Rotar izq">
+                <input type="button" name="imagen" class="btn btn-dark" value="Rotar der">
             </div>
+            <h1 id="pokedex-title">Pokedex</h1>
             <section id="pokemon-list">
 
             </section>
